Fixing errors in responsive
Fixing error with footer overlapping section container on the responsive view.

--- a/css/style.scss
+++ b/css/style.scss
@@ -164,7 +164,13 @@ footer {
     }
 
     .container {
-        height: 400px;
+        height: auto;
+    }
+
+    img {
+        max-width: 98%;
+        height: auto;
+        margin: 5px 2%;
     }
 
     footer {
